Fixed tests because of changes to BaseService